099_bst_set/grade.txt
Grading at 11/13/2022:22:29:55.502354
For commit ID 76eef9c9105f3a167f2f819e2f2bbefd4dd5a8d3
Grading at Sun Nov 13 05:29:54 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstSet<int>
...compiling...
In file included from 90-tester.cpp:1:
bstset.h:25:3: error: ISO C++ forbids declaration of ‘BstMap’ with no type [-fpermissive]
   25 |   BstMap() : root(NULL) {}
      |   ^~~~~~
bstset.h:140:3: error: ‘BstMap’ does not name a type
  140 |   BstMap & operator=(const BstSet<T> & rhs) {
      |   ^~~~~~
bstset.h:148:3: error: ISO C++ forbids declaration of ‘BstMap’ with no type [-fpermissive]
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |   ^~~~~~
bstset.h: In member function ‘int BstSet<T>::BstMap()’:
bstset.h:25:14: error: only constructors take member initializers
   25 |   BstMap() : root(NULL) {}
      |              ^~~~
bstset.h:25:26: error: no return statement in function returning non-void [-Werror=return-type]
   25 |   BstMap() : root(NULL) {}
      |                          ^
bstset.h: In member function ‘int BstSet<T>::BstMap(const BstSet<T>&)’:
bstset.h:148:35: error: only constructors take member initializers
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |                                   ^~~~
bstset.h:148:64: error: no return statement in function returning non-void [-Werror=return-type]
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |                                                                ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstSet<std::string>
...compiling...
In file included from 90-tester.cpp:1:
bstset.h:25:3: error: ISO C++ forbids declaration of ‘BstMap’ with no type [-fpermissive]
   25 |   BstMap() : root(NULL) {}
      |   ^~~~~~
bstset.h:140:3: error: ‘BstMap’ does not name a type
  140 |   BstMap & operator=(const BstSet<T> & rhs) {
      |   ^~~~~~
bstset.h:148:3: error: ISO C++ forbids declaration of ‘BstMap’ with no type [-fpermissive]
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |   ^~~~~~
bstset.h: In member function ‘int BstSet<T>::BstMap()’:
bstset.h:25:14: error: only constructors take member initializers
   25 |   BstMap() : root(NULL) {}
      |              ^~~~
bstset.h:25:26: error: no return statement in function returning non-void [-Werror=return-type]
   25 |   BstMap() : root(NULL) {}
      |                          ^
bstset.h: In member function ‘int BstSet<T>::BstMap(const BstSet<T>&)’:
bstset.h:148:35: error: only constructors take member initializers
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |                                   ^~~~
bstset.h:148:64: error: no return statement in function returning non-void [-Werror=return-type]
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |                                                                ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstSet<(a custom class we wrote)>
...compiling...
In file included from 90-tester.cpp:1:
bstset.h:25:3: error: ISO C++ forbids declaration of ‘BstMap’ with no type [-fpermissive]
   25 |   BstMap() : root(NULL) {}
      |   ^~~~~~
bstset.h:140:3: error: ‘BstMap’ does not name a type
  140 |   BstMap & operator=(const BstSet<T> & rhs) {
      |   ^~~~~~
bstset.h:148:3: error: ISO C++ forbids declaration of ‘BstMap’ with no type [-fpermissive]
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |   ^~~~~~
bstset.h: In member function ‘int BstSet<T>::BstMap()’:
bstset.h:25:14: error: only constructors take member initializers
   25 |   BstMap() : root(NULL) {}
      |              ^~~~
bstset.h:25:26: error: no return statement in function returning non-void [-Werror=return-type]
   25 |   BstMap() : root(NULL) {}
      |                          ^
bstset.h: In member function ‘int BstSet<T>::BstMap(const BstSet<T>&)’:
bstset.h:148:35: error: only constructors take member initializers
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |                                   ^~~~
bstset.h:148:64: error: no return statement in function returning non-void [-Werror=return-type]
  148 |   BstMap(const BstSet<T> & rhs) : root(NULL) { copy(rhs.root); }
      |                                                                ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
